# CRUD-FASTAPI-FARM

./: pyproject.toml
fastapi_crud/: main.py
