[tool.poetry]
name = "fastapi-crud"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"

[tool.taskipy.tasks]
run = "uvicorn fastapi_crud.main:app --reload"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
